--- a/style/monster.css
+++ b/style/monster.css
@@ -24,6 +24,7 @@
 .forbidden-lands .monster .bio .bio-row .npc-type select {
   width: 10em;
   margin-right: 8px;
+  margin-left: 4px;
 }
 
 .forbidden-lands .monster .bio .avatar {
